deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homebridge
  labels:
    app: homebridge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homebridge
  template:
    metadata:
      labels:
        app: homebridge
    spec:
      hostNetwork: true
      volumes:
        - name: homebridge-volume
          hostPath:
            path: /homebridge
            type: DirectoryOrCreate
      containers:
        - name: homebridge
          image: oznu/homebridge
          ports:
            - containerPort: 8010
          livenessProbe:
            httpGet:
              path: /
              port: 8010
            initialDelaySeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8010
            initialDelaySeconds: 10
---
kind: Service
apiVersion: v1
metadata:
  name: homebridge
spec:
  selector:
    app: homebridge
  ports:
    - protocol: TCP
      port: 8010
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: homebridge
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  labels:
    app: homebridge
spec:
  rules:
    - http:
        paths:
          - path: /homebridge(/|$)(.*)
            backend:
              serviceName: homebridge
              servicePort: 8010
